feat:完成任务类排序功能，并优化任务排序